[gd_scene load_steps=5 format=3 uid="uid://d135p3nmej7ya"]

[ext_resource type="Script" uid="uid://di4d2ey3n0kgr" path="res://scenes/ui/hud/hud.gd" id="1_bngdn"]
[ext_resource type="Texture2D" uid="uid://deebsankyubq1" path="res://assets/items/gems/Blue Diamond/collectible_empty.png" id="2_as3gr"]
[ext_resource type="Texture2D" uid="uid://kqhv311lcl2a" path="res://assets/items/gems/Blue Diamond/collectible_filled.png" id="3_ax4tw"]
[ext_resource type="Texture2D" uid="uid://tdmch2t0hmn8" path="res://assets/items/coins/Gold Coin/01.png" id="4_ax4tw"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_bngdn")
diamond_empty_texture = ExtResource("2_as3gr")
diamond_filled_texture = ExtResource("3_ax4tw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 200.0
offset_bottom = 50.0

[node name="DiamondContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Diamond1" type="TextureRect" parent="VBoxContainer/DiamondContainer"]
layout_mode = 2

[node name="Diamond2" type="TextureRect" parent="VBoxContainer/DiamondContainer"]
layout_mode = 2

[node name="Diamond3" type="TextureRect" parent="VBoxContainer/DiamondContainer"]
layout_mode = 2

[node name="CoinContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CoinIcon" type="TextureRect" parent="VBoxContainer/CoinContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_ax4tw")
expand_mode = 2
stretch_mode = 4

[node name="CoinLabel" type="Label" parent="VBoxContainer/CoinContainer"]
layout_mode = 2
text = "x 00"
